--- a/app/src/main/res/layout/fragmentgoldtoloancalculation.xml
+++ b/app/src/main/res/layout/fragmentgoldtoloancalculation.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/backgroundLight"
     android:padding="10dp"
-    tools:context=".Fragment.home_fragment">
+    tools:context=".Fragment.goldtoloancalculation">
 
    <!-- Single ScrollView for all scrollable content -->
    <ScrollView
