--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="gold_yellow">#FBBF24</color>
     <color name="background_cream">#FAF3E0</color>
     <color name="text_grey">#757575</color>
+    <color name="transparent">#00000000</color>
     <color name="border_light">#757575</color>
 
     <color name="light_gold">#FFF8DC</color>   <!-- background -->
