--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/bg_main"
     tools:context=".Activity.MainActivity">
 
     <!-- Main Screen Content -->
@@ -31,7 +32,7 @@
             android:layout_height="match_parent"
             android:layout_below="@id/topAppBar"
             android:id="@+id/main_container"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             />
 
     </RelativeLayout>
