--- a/app/src/main/res/layout/fragmentgoldtoloancalculation.xml
+++ b/app/src/main/res/layout/fragmentgoldtoloancalculation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/backgroundLight"
+    android:background="@color/transparent"
     android:padding="10dp"
     tools:context=".Fragment.goldtoloancalculation">
 
