--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/nav_home"
         android:title="Home"
-        android:icon="@drawable/ic_weight" />
+        android:icon="@drawable/ic_home" />
 
     <item
         android:id="@+id/nav_goldtoloan"
