safe And productive Gold Loan calci 6 Aug Online app Home Activity and Gold to loan saprate Gold Icons and bg colers add

--- a/app/src/main/res/drawable/bg_main.xml
+++ b/app/src/main/res/drawable/bg_main.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <gradient
-        android:startColor="#FFF8DC"
-        android:endColor="#FFE4B5"
+        android:startColor="#FFF"
+        android:endColor="#FFF"
         android:angle="135" />
 
     <corners android:radius="16dp" />
