--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -8,7 +8,12 @@
     <item
         android:id="@+id/nav_goldtoloan"
         android:title="Gold To Loan"
-        android:icon="@drawable/ic_weight" />
+        android:icon="@drawable/ic_gold_bar" />
+
+    <item
+        android:id="@+id/nav_loantogold"
+        android:title="Loan To Gold"
+        android:icon="@drawable/ic_rupee" />
     <item
         android:id="@+id/nav_scheme"
         android:title="Schemes"
