--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="off_white">#F7F7F7</color>
     <color name="text_red">#D62828</color>
     <color name="gold_yellow">#FBBF24</color>
     <color name="background_cream">#FAF3E0</color>
